Bug 232447 - kdevelop does not respect EXECUTABLE_OUTPUT_PATH for launch configurations
Summary: kdevelop does not respect EXECUTABLE_OUTPUT_PATH for launch configurations
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: Build tools: CMake (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-28 12:06 UTC by Benjamin Schindler
Modified: 2011-12-02 19:09 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Benjamin Schindler 2010-03-28 12:06:45 UTC
Version:           svn (using KDE 4.4.1)
OS:                Linux
Installed from:    Gentoo Packages

Let me describe my project layout: 

CMake/VisdomUtils.cmake
CMakeLists.txt
utils/core/main/CMakeLists.txt

- The root CMakeLists first includes VisdomUtils. It sets EXECUTABLE_OUTPUT_PATH to ${BIN_PATH}/bin
- It then includes utils/core/main/CMakeLists.txt using subdirectory
- utils/core/main/CMakeLists.txt adds an executable using ADD_EXECUTABLE

When I go to the launch configuration, I add a new launch configuration: core/main/main

When I execute I get this: 

Could not start program '/home/benjamin/software/visdom/build/core/main/main'. Make sure that the path is specified correctly.
Comment 1 Eugene Shalygin 2010-04-17 01:58:14 UTC
Same for set_target_properties(bla-bla PROPERTIES RUNTIME_OUTPUT_DIRECTORY some_dir)
Comment 2 Benjamin Schindler 2010-06-10 16:30:28 UTC
Since newer cmake versions, there are other variables now: 

- Target properties: LIBRARY_OUTPUT)DIRECTORY, RUNTIME_OUTPUT_DIRECTORY and ARCHIVE_DIRECTORY
- Global Variables: CMAKE_LIBRARY_OUTPUT_DIRECTORY, CMAKE_RUNTIME_OUTPUT_DIRECTORY + CMAKE_ARCHIVE_OUTPUT_DIRECTORY

The old EXECUTABLE_OUTPUT_PATH are deprecated afaict
Comment 3 Aleix Pol 2010-06-10 16:36:50 UTC
I thought I fixed that.
I'll give it another look.

Thanks!
Comment 4 Benjamin Schindler 2010-06-14 09:41:27 UTC
Hmm... it seems you are right. At least in the case of CMAKE_RUNTIME_OUTPUT_DIRECTORY, it works here. I cannot test EXECUTABLE_OUTPUT_DIRECTORY or the target_properties. 
I think support for target_properties is missing as a whole, so this bug should stay open until that is fixed

Cheers
Benjamin
Comment 5 Aleix Pol 2010-06-14 13:32:13 UTC
It's not missing as a whole, could you send me a little example that I can use to work on?
That would make the solving easier.
Comment 6 Aleix Pol 2011-12-02 19:09:48 UTC
Git commit ea6db89fbff42a2d6ec1435b0baa7304b6c73c17 by Aleix Pol.
Committed on 02/12/2011 at 20:09.
Pushed by apol into branch 'master'.

Fix integration with custom output paths in CMake.

BUG: 232447

M  +13   -7    projectmanagers/cmake/cmakemanager.cpp

http://commits.kde.org/kdevelop/ea6db89fbff42a2d6ec1435b0baa7304b6c73c17