Fix integration with custom output paths in CMake.

BUG: 232447